--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>My Blog</title>
+    <link rel="icon" href="https://image.freepik.com/free-icon/letter-b-symbol_318-53737.jpg" type="image/icon type">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-serif"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
